name:                charter-service
version:             0.1.0.0
description:         toy HTTP REST service for charter flights
license:             BSD3
author:              Tad Doxsee
copyright:           2016 Tad Doxsee
build-type:          Simple
cabal-version:       >=1.10

executable charter-service
  main-is:             charter-service.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , lens
                     , mtl
                     , servant
                     , servant-server
                     , stm
                     , string-conversions
                     , servant-swagger
                     , swagger2
                     , text
                     , tinylog
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010
